--- a/drivers/net/CMakeLists.txt
+++ b/drivers/net/CMakeLists.txt
@@ -1,2 +1,12 @@
 
+target_sources(syscore 
+    PRIVATE 
+        FILE_SET net_headers
+        TYPE HEADERS
+        FILES 
+            Packet.hpp
+            PacketQueue.hpp
+)
+
+
 add_subdirectory(w5300)
